@@ -92,8 +92,10 @@ The developers cooperate with the <a
 href="http://www.linuxdj.com/audio/lad/eventslt2003.php3"> Linux Audio
 Developers</a> group.
 
-<p>
+<p><a
+href="http://www.gnu.org/software/guile">
 <img src=@IMAGES@guile-logo.jpeg align=right>
+</a>
 
 LilyPond uses Project GNU's <a
 href="http://www.gnu.org/software/guile">GUILE</a> Scheme interpreter
